# tingyuxuan-app

./: .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  eslint.config.js  index.html  package-lock.json  package.json  prd.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/tingyuxuan/core/: NativeCore.kt
android/app/src/main/kotlin/com/tingyuxuan/ime/: ConfigStore.kt  LifecycleInputMethodService.kt  OnboardingActivity.kt  SettingsActivity.kt  TingYuXuanIMEService.kt
android/app/src/main/kotlin/com/tingyuxuan/ime/audio/: AudioRecorder.kt
android/app/src/main/kotlin/com/tingyuxuan/ime/controller/: PipelineController.kt  RecordingController.kt
android/app/src/main/kotlin/com/tingyuxuan/ime/model/: IMEState.kt  InputContextData.kt  KeyboardIntent.kt
android/app/src/main/kotlin/com/tingyuxuan/ime/ui/: TingYuXuanKeyboard.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: method.xml  network_security_config.xml
android/app/src/test/kotlin/com/tingyuxuan/core/: NativeCoreTest.kt
android/app/src/test/kotlin/com/tingyuxuan/ime/: ConfigStoreTest.kt  IMEServiceTest.kt
android/app/src/test/kotlin/com/tingyuxuan/ime/audio/: AudioRecorderTest.kt
crates/tingyuxuan-core/: Cargo.toml
crates/tingyuxuan-core/src/: api_key.rs  config.rs  context.rs  error.rs  history.rs  lib.rs
crates/tingyuxuan-core/src/audio/: cache.rs  devices.rs  encoder.rs  mod.rs  recorder.rs  wav_writer.rs
crates/tingyuxuan-core/src/llm/: mod.rs  multimodal.rs  openai_compat.rs  prompts.rs  provider.rs
crates/tingyuxuan-core/src/pipeline/: events.rs  mod.rs  network.rs  orchestrator.rs  queue.rs  recovery.rs  retry.rs  session.rs
crates/tingyuxuan-core/src/stt/: dashscope_asr.rs  dashscope_streaming.rs  mod.rs  provider.rs  streaming.rs  whisper.rs
crates/tingyuxuan-core/src/telemetry/: events.rs  mod.rs  sls.rs
crates/tingyuxuan-jni/: Cargo.toml  build-android.sh
crates/tingyuxuan-jni/src/: handle.rs  lib.rs
docs/: README.md  competitive-analysis.md  prd.md
docs/architecture/: data-flow.md  frontend.md  overview.md  ui-design.md
docs/architecture/adr/: 0001-tauri-framework.md  0002-split-managed-state.md  0003-recorder-actor-pattern.md  0004-event-bridge-push-model.md  0005-keyring-api-key-storage.md  0006-platform-abstraction-layer.md  0007-android-native-ime.md  0008-multimodal-pipeline.md  0009-audio-device-selection.md  template.md
docs/guides/: ci-release-notes.md  configuration.md  installation.md  troubleshooting.md  usage.md
docs/modules/: audio.md  config.md  history.md  jni-bridge.md  llm.md  pipeline.md  security.md  stt.md  text-injection.md
docs/plan/: 2026-03-03-documentation-automation.md  2026-03-03-documentation-governance.md  2026-03-03-mvp-acceptance-report.md  2026-03-03-qwen3-asr-flash-transport-decision.md  2026-03-03-technical-debt-remediation-v0.10.3.md  2026-03-03-tray-menu-redesign.md  observability-enhancement.md  phase-1-mvp.md  phase-2-integration.md  phase-3-enhanced.md  phase-4-production.md  phase-5-ui-overhaul.md  phase-6-multimodal-pipeline.md  phase-7-voice-mvp-remediation.md
docs/plans/: 2026-03-02-permissions-observability.md
mcp-servers/: sentry-mcp.js  sls-mcp.js
scripts/quality/: redline-check.mjs
src/: App.tsx  test-utils.tsx
src-tauri/: Cargo.toml  Entitlements.plist  app-icon.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  context.rs  lib.rs  main.rs  recorder_actor.rs  state.rs  text_injector.rs  tray.rs
src-tauri/src/platform/: error.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorPanel.test.tsx  ErrorPanel.tsx  FloatingBar.test.tsx  FloatingBar.tsx  ResultPanel.test.tsx  ResultPanel.tsx  Waveform.test.tsx  Waveform.tsx
src/components/Settings/: ApiConfig.test.tsx  ApiConfig.tsx  DictionaryConfig.tsx  GeneralConfig.tsx  HistoryPanel.tsx  PermissionGuide.tsx  SettingsPanel.tsx  SetupWizard.tsx  ShortcutConfig.tsx
src/features/dashboard/: HomePage.test.tsx  HomePage.tsx  RecentTranscripts.tsx  StatsCard.tsx  StatsGrid.test.tsx  StatsGrid.tsx
src/features/dashboard/hooks/: useStats.ts
src/features/dictionary/: DictionaryPage.test.tsx  DictionaryPage.tsx  WordTagGrid.tsx
src/features/dictionary/hooks/: useDictionary.test.ts  useDictionary.ts
src/features/history/: HistoryItem.tsx  HistoryItem.utils.ts  HistoryList.tsx  HistoryPage.test.tsx  HistoryPage.tsx
src/features/history/hooks/: useHistory.test.ts  useHistory.ts
src/features/onboarding/: IntroSlide.tsx  OnboardingFlow.tsx  PermissionGuide.tsx  SetupWizard.tsx
src/features/recording/: ErrorPanel.tsx  FloatingBar.tsx  ResultPanel.tsx  Waveform.tsx
src/features/recording/hooks/: useSoundEffect.ts
src/features/settings/: SettingsDialog.test.tsx  SettingsDialog.tsx
src/features/settings/components/: ApiKeyField.tsx  ConnectionTestButton.tsx
src/features/settings/hooks/: useApiKey.ts  useConfig.ts  useConnectionTest.ts
src/features/settings/sections/: ApiSection.tsx  AudioSection.tsx  BehaviorSection.tsx  LanguageSection.tsx  ShortcutSection.tsx
src/features/settings/tabs/: AboutTab.tsx  AccountTab.tsx  PersonalizationTab.tsx  SettingsTab.tsx
src/lib/: logger.test.ts  logger.ts  markdown.test.ts  providers.ts  types.ts
src/shared/components/: MainLayout.tsx  ToastHost.tsx
src/shared/hooks/: useSystemTheme.ts  useTauriEvent.test.ts  useTauriEvent.ts
src/shared/lib/: logger.ts  markdown.ts  providers.ts  telemetry.ts  theme.ts  types.ts
src/shared/stores/: appStore.ts  statsStore.ts  uiStore.ts
src/stores/: appStore.test.ts  appStore.ts
src/styles/: globals.css
(+1 files in other folders)
