[package]
name = "tingyuxuan-app"
version = "0.2.0"
edition = "2021"
description = "TingYuXuan - AI-powered voice input tool"

[dependencies]
tingyuxuan-core = { path = "../crates/tingyuxuan-core" }
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "windows-native"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "tingyuxuan_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
