[package]
name = "tingyuxuan-app"
version = "0.10.0"
edition = "2024"
description = "TingYuXuan - AI-powered voice input tool"
repository = "https://github.com/sinnohzeng/tingyuxuan-app"
license = "LicenseRef-Proprietary"

[dependencies]
tingyuxuan-core = { path = "../crates/tingyuxuan-core" }
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
keyring = { version = "3.6", features = ["sync-secret-service", "crypto-rust", "windows-native", "apple-native"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sentry = "0.42"
tauri-plugin-sentry = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
arboard = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[lib]
name = "tingyuxuan_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
