[package]
name = "tingyuxuan-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform core engine for TingYuXuan voice input tool"

[dependencies]
# Audio
cpal = "0.15"
hound = "3.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
directories = "6"
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
