[package]
name = "tingyuxuan-core"
version = "0.2.0"
edition = "2024"
description = "Cross-platform core engine for TingYuXuan voice input tool"
license = "LicenseRef-Proprietary"

[features]
default = ["audio"]
audio = ["dep:cpal", "dep:hound"]

[dependencies]
# Audio (optional — disabled for Android JNI builds)
cpal = { version = "0.17", optional = true }
hound = { version = "3.5", optional = true }

# HTTP client
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
directories = "6"
base64 = "0.22"

[dev-dependencies]
hound = "3.5"
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
